# hackathon-2023-winter

./: .gitignore  .gitmodules  README.md
Hexalem/: readme.md
Hexalem/src/substrate/: Cargo.toml  rustc-ice-2023-11-13T19:13:17.431799Z-38489.txt
Hexalem/src/substrate/.github/ISSUE_TEMPLATE/: config.yml
Hexalem/src/substrate/node/: Cargo.toml
Hexalem/src/substrate/node/src/: benchmarking.rs  chain_spec.rs  rpc.rs  service.rs
Hexalem/src/substrate/pallets/hexalem/: Cargo.toml  rustc-ice-2023-11-13T19:13:20.042374Z-38558.txt
Hexalem/src/substrate/pallets/hexalem/src/: lib.rs
Hexalem/src/substrate/runtime/: Cargo.toml
Hexalem/src/substrate/runtime/src/: lib.rs
cryptography/barnett-smart-card-protocol/: Cargo.toml
projects/02-W3OS/src/bounties/Gear-Five-in-a-Row/: .gitignore  Cargo.toml  README.md
projects/02-W3OS/src/bounties/Gear-Five-in-a-Row/contracts/: Cargo.toml  README.md  build.rs
projects/02-W3OS/src/bounties/Gear-Five-in-a-Row/contracts/io/: Cargo.toml
projects/02-W3OS/src/bounties/Gear-Five-in-a-Row/frontend/: index.html  package.json  vite.config.ts
projects/03-inscribe/src/Inscribe/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  test.txt
projects/03-inscribe/src/Inscribe/inscribe/: .binpath  Cargo.toml  build.rs
projects/03-inscribe/src/Inscribe/inscribe-io/: Cargo.toml
projects/03-inscribe/src/Inscribe/inscribe-io/src/: lib.rs
projects/03-inscribe/src/Inscribe/inscribe/src/: lib.rs
projects/04-bilinearity/src/example-ci-project-bi/node_client/: Cargo.toml  metadata.scale
projects/04-bilinearity/src/risc0-gitlab-runner-bi/: Cargo.toml
projects/04-bilinearity/src/risc0-gitlab-runner-bi/node_client/src/: main.rs
projects/04-bilinearity/src/risc0-gitlab-runner-bi/src/: main.rs
projects/04-bilinearity/src/substrate-winter-2023-hackathon-bi/prover/: Cargo.toml  README.md  metadata.scale
projects/04-bilinearity/src/substrate-winter-2023-hackathon-bi/prover/src/: main.rs
projects/10-space-trader/libs/bundle-pool/: Cargo.toml
projects/10-space-trader/libs/bundle-pool/src/: bundle.rs  lib.rs  pool.rs  rpc.rs  test.rs
projects/10-space-trader/parachain-template/node/: Cargo.toml
projects/15-friend-io/src/gear_friend_contract/: Cargo.toml  README.md  line.json
projects/15-friend-io/src/gear_friend_contract/kee_bee_share/: .binpath  Cargo.toml  build.rs
projects/15-friend-io/src/gear_friend_contract/kee_bee_share/kee-bee-io/: Cargo.toml
projects/15-friend-io/src/gear_friend_contract/kee_bee_share/src/: lib.rs  utils.rs
projects/15-friend-io/src/gear_friend_contract/kee_bee_share/tests/: tests.rs
projects/22-Melodot/src/redot/redlight/: Cargo.toml
projects/22-Melodot/src/redot/redlight/src/: cli.rs  das_rpc.rs  logger.rs  looper.rs  main.rs
projects/22-Melodot/src/redot/redoxt/: Cargo.toml  redoxt_metadata.scale
projects/22-Melodot/src/redot/redoxt/examples/: header.rs
projects/22-Melodot/src/redot/redoxt/src/: helper.rs  lib.rs  log.rs  run_examples.rs
projects/33-EVM-Account-Mapping/src/node/: Cargo.toml
projects/33-EVM-Account-Mapping/src/node/src/: benchmarking.rs  chain_spec.rs  command.rs  service.rs
projects/33-EVM-Account-Mapping/src/pallets/evm_account_mapping/: Cargo.toml
projects/33-EVM-Account-Mapping/src/pallets/evm_account_mapping/src/: lib.rs  mock.rs  tests.rs
projects/33-EVM-Account-Mapping/src/runtime/: Cargo.toml
projects/33-EVM-Account-Mapping/src/runtime/src/: lib.rs
projects/34- Cyborg Network/src/cyberhub/: Cargo.toml  README.md  db.rs
projects/34- Cyborg Network/src/cyborg node/: Cargo.toml  HEADER-GPL3  README.md  rust-toolchain.toml
projects/34- Cyborg Network/src/cyborg node/node/: Cargo.toml
projects/34- Cyborg Network/src/cyborg node/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
projects/34- Cyborg Network/src/cyborg node/pallets/edge-connect/: Cargo.toml
projects/34- Cyborg Network/src/cyborg node/runtime/: Cargo.toml
projects/34- Cyborg Network/src/cyborg node/runtime/src/: lib.rs
projects/37-MonteCarlo/src/poc-ai-script/ink/: Cargo.toml  lib.rs
projects/47-Plats-Event/src/contracts/common_traits/: Cargo.toml  lib.rs  upgradable.rs
projects/47-Plats-Event/src/contracts/common_traits/collection/: impls.rs  mod.rs  traits.rs  types.rs
projects/47-Plats-Event/src/contracts/common_traits/nft_collection_factory/: impls.rs  mod.rs  traits.rs  types.rs
projects/47-Plats-Event/src/contracts/nft_collection_factory/: Cargo.toml  lib.rs
projects/49-DePHY-Blockchain/src/node/: Cargo.toml  build.rs
projects/49-DePHY-Blockchain/src/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
projects/49-DePHY-Blockchain/src/runtime-primitives/: Cargo.toml
projects/49-DePHY-Blockchain/src/runtime-primitives/src/: lib.rs
projects/51-lousydropout/src/: Cargo.toml  lib.rs
projects/61-Polka-Finance/src/: .gitignore  Cargo.toml  README.md  config.yml
projects/61-Polka-Finance/src/.github/workflows/: build_and deploy_on_server.yaml
projects/61-Polka-Finance/src/artifacts/: westmint_metadata.json  westmint_metadata.scale
projects/61-Polka-Finance/src/configs/: energy_trading_api.service  nginx.vhost
projects/61-Polka-Finance/src/data_generator/pv-solar-energy-tracking-system/: .gitignore  README.md  plug_device.py  pv_station.py  requirements.txt  service.py
projects/61-Polka-Finance/src/data_generator/pv-solar-energy-tracking-system/config/: config_service.template.yaml  config_service.yaml  config_station_.template.yaml  config_station_1.yaml  config_station_2.yaml
projects/61-Polka-Finance/src/data_generator/pv-solar-energy-tracking-system/test/: station_1.yaml  station_2.yaml
projects/61-Polka-Finance/src/src/: error.rs  lib.rs  macros.rs  main.rs
projects/61-Polka-Finance/src/src/blockchain/: mod.rs  westmint.rs
projects/61-Polka-Finance/src/src/controllers/: energy.rs  mod.rs
projects/61-Polka-Finance/src/src/models/: endpoint.rs  energy.rs  mod.rs  westmint.rs
projects/61-Polka-Finance/src/src/server/: config.rs  mod.rs
projects/61-Polka-Finance/src/src/storage/: fs.rs
(+3322 files in other folders)
