[package]
name = "betting"
version = "0.1.0"
authors = ["lousydropout <vincent@doingcloudstuff.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "chrono/std"]
ink-as-dependency = []
