[package]
name = "energy_trading_api"
version = "0.1.0"
description = "API Server for management of PV energy items (NFTs) on Polkadot blockchain"
authors = ["Andrii Dubyk <andrii.dubyk@482.solutions>"]
license = "Apache-2.0 License"
categories = ["blockchain", "polkadot", "http"]
keywords = [
    "api", "server", "blockchain", "polkadot", "web", "api management", "rocket", "rust"
]
readme = "README.md"
repository = "https://github.com/482solutions/pv_solar_energy_trading_api"
exclude = [
    ".gitignore",
    "config.yml",
    "configs"
]
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
config = "0.13.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
subxt = { git = "https://github.com/paritytech/subxt", rev = "e3732e3" }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "energy_trading_api"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true