[package]
name = "risc0-gitlab-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
bytes = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }
gitlab-runner = "0.0.8"
lava-api = "0.1.1"
lazy_static = "1.4"
structopt = "0.3.23"
url = "2.2.2"
tokio = "1.12.0"
async-trait = "0.1.51"
futures = "0.3.17"
handlebars = "4"
masker = { version="0.0.4", features=["streams"] }
junit-parser = "0.2"
serde = { version = "^1.0.97", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9"
rand = "0.8.4"
tempfile = "3.3.0"
tokio-util = { version = "0.7", features = [ "io" ] }
tracing-subscriber = { version = "0.3.9", features = [ "env-filter"] }
tracing = "0.1.31"
