[package]
name = "bundle-pool"
version = "0.1.0"
license = "MIT"
description = "SpaceTrader Bundle Pool"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.6.1" }
futures = "0.3.21"
futures-timer = "3.0.2"
linked-hash-map = "0.5.4"
log = "0.4.17"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["client-core", "macros", "server"] }
hex = "0.4.3"
thiserror = "1.0"

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
log = "0.4.17"
env_logger = "0.9"
array-bytes = "6.1"
assert_matches = "1.3.0"
criterion = "0.4.0"
tokio = "1.22.0"
jsonrpsee = { version = "0.16.2", features = ["client-core", "macros", "server"] }
futures = "0.3.21"

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[features]
default = []
