[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.188", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.28"
serde_json = "1.0.108"

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", features = ["rococo-native"] }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false}

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-template-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]

